    Changed `advlist` toolbar buttons to only show a dropdown list if there's more than one option #TINY-3194
    Changed `mceInsertTable` command and `insertTable` API method to take optional header rows and columns arguments #TINY-6012
    Fixed table `Paste row after` and `Paste row before` menu items not disabled when nothing was available to paste #TINY-6006
    Fixed filters for screening commands from the undo stack to be properly case-insensitive #TINY-5946
    Fixed `fullscreen` plugin now removes all classes when the editor is closed #TINY-4048
    Fixed handling of mixed-case icon names by having the silver theme downcase them before icon retrieval #TINY-3854
    Fixed leading and trailing spaces lost when using `editor.selection.getContent({ format: 'text' })` #TINY-5986
    Fixed an issue where removing formatting in a table cell would cause Internet Explorer 11 to scroll to the end of the table #TINY-6049
Version 5.3.2 (2020-06-10)
    Fixed a regression introduced in 5.3.0, where `images_dataimg_filter` was no-longer called #TINY-6086
Version 5.3.1 (2020-05-27)
    Fixed the image upload error alert also incorrectly closing the image dialog #TINY-6020
    Fixed editor content scrolling incorrectly on focus in Firefox by reverting default content CSS html and body heights added in 5.3.0 #TINY-6019
Version 5.3.0 (2020-05-21)
    Added html and body height styles to the default oxide content CSS #TINY-5978
    Added `uploadUri` and `blobInfo` to the data returned by `editor.uploadImages()` #TINY-4579
    Added a new function to the `BlobCache` API to lookup a blob based on the base64 data and mime type #TINY-5988
    Added the ability to search and replace within a selection #TINY-4549
    Added the ability to set the list start position for ordered lists and added new `lists` context menu item #TINY-3915
    Added `icon` as an optional config option to the toggle menu item API #TINY-3345